feat: manage imports by plugins

--- a/src/Teamup/MyClub.Teamup.Wpf/Views/Edition/EditableTeamSelectionView.xaml
+++ b/src/Teamup/MyClub.Teamup.Wpf/Views/Edition/EditableTeamSelectionView.xaml
@@ -27,9 +27,9 @@
         <my:IconAssist.Icon>
             <StackPanel Orientation="Horizontal">
                 <Button Style="{StaticResource MyNet.Styles.Button.Icon.Tool}"
-                        Command="{Binding ImportFromDatabaseCommand}"
+                        Command="{Binding ImportCommand}"
                         Content="{my:Icon Kind=DatabaseSearch}"
-                        ToolTip="{my:Resource ImportFromDatabase}"
+                        ToolTip="{my:Resource Import}"
                         Visibility="{Binding IsEnabled, RelativeSource={RelativeSource Self}, Converter={x:Static my:BooleanToVisibilityConverter.CollapsedIfFalse}}" />
                 <Button Style="{StaticResource MyNet.Styles.Button.Icon.Tool}"
                         Command="{Binding AddCommand}"
