--- a/src/Teamup/MyClub.Teamup.Wpf/Views/Selection/StadiumsSelectionView.xaml
+++ b/src/Teamup/MyClub.Teamup.Wpf/Views/Selection/StadiumsSelectionView.xaml
@@ -44,7 +44,7 @@
         <!--  Filters  -->
         <DockPanel Margin="{StaticResource MyNet.Margins.Medium}" DockPanel.Dock="Top">
             <ContentControl Content="{Binding}" ContentTemplate="{StaticResource Teamup.DataTemplates.List.Count}" DockPanel.Dock="Right" />
-            <selection:StadiumsSpeedFiltersView DataContext="{Binding Filters.SpeedFilters}" />
+            <selection:StadiumsSpeedFiltersView DataContext="{Binding Filters}" />
         </DockPanel>
 
         <!--  Items  -->
