feat: add option "Allow reschedule"

--- a/src/Scorer/MyClub.Scorer.Wpf/Themes/Scorer.Theme.xaml
+++ b/src/Scorer/MyClub.Scorer.Wpf/Themes/Scorer.Theme.xaml
@@ -9,6 +9,7 @@
 
     <ResourceDictionary.MergedDictionaries>
         <my:SharedResourceDictionary Source="pack://application:,,,/MyNet.Wpf;component/Themes/MyNet.Styles.xaml" />
+        <my:SharedResourceDictionary Source="pack://application:,,,/Scorer;component/Themes/Scorer.Styles.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <!--  MessageBox  -->
