--- a/src/Scorer/MyClub.Scorer.Wpf/Views/SchedulePage/MatchesPlanningView.xaml
+++ b/src/Scorer/MyClub.Scorer.Wpf/Views/SchedulePage/MatchesPlanningView.xaml
@@ -104,7 +104,7 @@
                 <my:DropDownButton IsEnabled="{Binding CanRescheduleSelectedItems}"
                                    PopupPadding="0"
                                    ToggleContent="{my:MediumIcon Kind=Stadium}"
-                                   ToolTip="{my:Resource RescheduleStadium}">
+                                   ToolTip="{my:Resource ChangeLocation}">
                     <my:Submenu my:ItemsControlAssist.SortingProperty="Item.Address.City" ItemsSource="{Binding Stadiums.Wrappers}">
                         <my:Submenu.ItemContainerStyle>
                             <Style TargetType="{x:Type MenuItem}" BasedOn="{StaticResource MyNet.Styles.MenuItem}">
