--- a/src/Scorer/MyClub.Scorer.Wpf/Views/Edition/RankLabelEditionView.xaml
+++ b/src/Scorer/MyClub.Scorer.Wpf/Views/Edition/RankLabelEditionView.xaml
@@ -2,12 +2,13 @@
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                  xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                   xmlns:my="http://mynet.com/xaml/themes"
                   xmlns:vm="clr-namespace:MyClub.Scorer.Wpf.ViewModels.Edition"
                   Style="{StaticResource MyNet.Styles.ContentDialog}"
-                  Width="400"
-                  Height="300"
+                  Width="365"
+                  Height="270"
                   d:DataContext="{d:DesignInstance Type=vm:RankLabelEditionViewModel}"
                   BusyService="{Binding BusyService, Mode=OneWay}"
                   Header="{my:Resource Label}"
@@ -36,26 +37,6 @@
             <my:SimpleStackPanel Orientation="Horizontal">
                 <TextBox Width="{StaticResource MyNet.Widths.Control.Large}" my:HintAssist.Hint="{my:Resource Name}" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
                 <TextBox Width="{StaticResource MyNet.Widths.Control.Medium}" my:HintAssist.Hint="{my:Resource ShortName}" Text="{Binding ShortName, UpdateSourceTrigger=PropertyChanged}" />
-            </my:SimpleStackPanel>
-        </GroupBox>
-
-        <GroupBox Style="{StaticResource MyNet.Styles.GroupBox.Edition}" Header="{my:MediumIcon Kind=Podium}">
-            <my:SimpleStackPanel Orientation="Horizontal">
-                <ToggleButton Style="{StaticResource MyNet.Styles.ToggleButton.Icon}"
-                              Content="{my:MediumIcon Kind=FormatListGroup}"
-                              IsChecked="{Binding IsRange}"
-                              ToolTip="{my:Resource DefineARange}" />
-                <TextBlock Text="{my:Resource From}" Visibility="{Binding IsRange, Converter={x:Static my:BooleanToVisibilityConverter.CollapsedIfFalse}}" />
-                <my:NumericUpDown Width="70"
-                                  my:HintAssist.IsFloating="False"
-                                  Minimum="1"
-                                  Value="{my:NullableBinding FromRank}" />
-                <TextBlock Text="{my:Resource To}" Visibility="{Binding IsRange, Converter={x:Static my:BooleanToVisibilityConverter.CollapsedIfFalse}}" />
-                <my:NumericUpDown Width="70"
-                                  my:HintAssist.IsFloating="False"
-                                  Minimum="1"
-                                  Visibility="{Binding IsRange, Converter={x:Static my:BooleanToVisibilityConverter.CollapsedIfFalse}}"
-                                  Value="{my:NullableBinding ToRank}" />
             </my:SimpleStackPanel>
         </GroupBox>
 
